--- a/emo.html
+++ b/emo.html
@@ -202,6 +202,7 @@
         </div>
     </div>
 </body>
+ <script src="./assests/js/emo.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
     crossorigin="anonymous"></script>
