--- a/emo.html
+++ b/emo.html
@@ -55,7 +55,7 @@
             <div class="col-md-12">
                 <p class="text-center">EduLiasion Mathematics Olympiad is held in two level:</p>
                 <br>
-                <p > <b>Level 1: </b> <br> The respective school is the venue for students appearing
+                <p> <b>Level 1: </b> <br> The respective school is the venue for students appearing
                     through schools. For those students who are registered as an individual will have to take exam from
                     home or from institute having computer with good internet connectivity.
                     <br>
@@ -74,17 +74,20 @@
                     </ul>
                 </div>
                 <p>
-                  <b> Level 2:</b> <br> The Level 2 is organised for students of classes 3 to 10 only. The qualifiers to second
+                    <b> Level 2:</b> <br> The Level 2 is organised for students of classes 3 to 10 only. The qualifiers
+                    to second
                     round would include the following:
                     <br>
-                    <ul>
-                        <li>Top 5% of candidates in a particular class that have given the Level 1 exam. Please note that, to
-                            calculate the top 5% students, due weightage will be given to marks scored in different sections.
-                            Also, each section is accorded with a separate weightage.</li>
-                        <li>Top 25 rank holders in a particular class and in a particular zone.</li>
-                    </ul>
-                     <br>
-                    
+                <ul>
+                    <li>Top 5% of candidates in a particular class that have given the Level 1 exam. Please note that,
+                        to
+                        calculate the top 5% students, due weightage will be given to marks scored in different
+                        sections.
+                        Also, each section is accorded with a separate weightage.</li>
+                    <li>Top 25 rank holders in a particular class and in a particular zone.</li>
+                </ul>
+                <br>
+
                 </p>
 
             </div>
@@ -97,15 +100,20 @@
                     <h2 class="mb-0">
                         <button class="btn  btn-block text-left" type="button" data-toggle="collapse"
                             data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                           <p style="font-size: 15px; color: #ff9900; font-weight: 700;"> Class 1 <span style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
+                            <p style="font-size: 15px; color: #ff9900; font-weight: 700;"> Class 1 <span
+                                    style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
                         </button>
                     </h2>
                 </div>
 
-                <div id="collapseOne" class="collapse " aria-labelledby="class1"
-                    data-parent="#accordion">
+                <div id="collapseOne" class="collapse " aria-labelledby="class1" data-parent="#accordion">
                     <div class="card-body ">
-                        <p style="font-size: 12px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae pariatur deserunt voluptas sit totam dolorem facilis eveniet, unde iure vitae nesciunt aperiam nam cum.</p>
+                        <p style="font-size: 14px;">Section 1: Numerals, Number Names, Number Sense (2 digit numbers),
+                            Addition, Subtraction, Lengths, Weights and Comparisons, Time, Money, Geometrical Shapes and
+                            Solids, Patterns.
+                            <br>
+                            Achievers Section: Higher Order Thinking Questions - Syllabus as per Section 1
+                        </p>
                     </div>
                 </div>
             </div>
@@ -114,13 +122,19 @@
                     <h2 class="mb-0">
                         <button class="btn  btn-block text-left collapsed" type="button" data-toggle="collapse"
                             data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                          <p style="font-size: 15px; color: #ff9900; font-weight: 700;">Class 2  <span style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p> 
+                            <p style="font-size: 15px; color: #ff9900; font-weight: 700;">Class 2 <span
+                                    style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
                         </button>
                     </h2>
                 </div>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                     <div class="card-body">
-                        <p style="font-size: 12px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae pariatur deserunt voluptas sit totam dolorem facilis eveniet, unde iure vitae nesciunt aperiam nam cum.</p>
+                        <p style="font-size: 14px;">Section 1: Numerals, Number Names and Number Sense (3-Digit
+                            Numbers), Computation Operations, Length, Weight, Capacity, Time, Temperature, Money, Lines,
+                            Shapes and Solids, Pictographs, Patterns.
+                            <br>
+                            Achievers Section: Higher Order Thinking Questions - Syllabus as per Section 1
+                        </p>
                     </div>
                 </div>
             </div>
@@ -129,13 +143,19 @@
                     <h2 class="mb-0">
                         <button class="btn  btn-block text-left collapsed" type="button" data-toggle="collapse"
                             data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                         <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 3 <span style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p> 
+                            <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 3 <span
+                                    style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
                         </button>
                     </h2>
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                     <div class="card-body">
-                       <p style="font-size: 12px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae pariatur deserunt voluptas sit totam dolorem facilis eveniet, unde iure vitae nesciunt aperiam nam cum.</p>
+                        <p style="font-size: 14px;">Section 1: Numerals, Number Names and Number Sense (4-digit
+                            numbers), Computation Operations, Fractions, Length, Weight, Capacity, Temperature, Time,
+                            Money, Geometry, Data Handling.
+                            <br>
+                            Achievers Section: Higher Order Thinking Questions - Syllabus as per Section 1
+                        </p>
                     </div>
                 </div>
             </div>
@@ -144,13 +164,19 @@
                     <h2 class="mb-0">
                         <button class="btn  btn-block text-left collapsed" type="button" data-toggle="collapse"
                             data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                         <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 4 <span style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p> 
+                            <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 4 <span
+                                    style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
                         </button>
                     </h2>
                 </div>
                 <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
                     <div class="card-body">
-                       <p style="font-size: 12px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae pariatur deserunt voluptas sit totam dolorem facilis eveniet, unde iure vitae nesciunt aperiam nam cum.</p>
+                        <p style="font-size: 14px;">Section 1: Numerals and Number Names, Number Sense (5-digit
+                            numbers), Computation Operations, Fractions, Length, Weight, Capacity, Time, Money,
+                            Geometry, Perimeter of Various Shapes, Symmetry, Conversions, Data Handling.
+                            <br>
+                            Achievers Section: Higher Order Thinking Questions - Syllabus as per Section 1
+                        </p>
                     </div>
                 </div>
             </div>
@@ -159,13 +185,20 @@
                     <h2 class="mb-0">
                         <button class="btn  btn-block text-left collapsed" type="button" data-toggle="collapse"
                             data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                         <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 5 <span style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p> 
+                            <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 5 <span
+                                    style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
                         </button>
                     </h2>
                 </div>
                 <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
                     <div class="card-body">
-                       <p style="font-size: 12px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae pariatur deserunt voluptas sit totam dolorem facilis eveniet, unde iure vitae nesciunt aperiam nam cum.</p>
+                        <p style="font-size: 14px;">Section 1: Numerals, Number Names and Number Sense (7 and 8 digit
+                            numbers), Computation Operations, Fractions and Decimals, Measurement of Length, Weight,
+                            Capacity, Volume, Time, Temperature and Money, Conversions, Geometrical Shapes and Solids,
+                            Angles, Perimeter of Various Shapes & Area of Rectangle and Square, Symmetry, Data Handling.
+                            <br>
+                            Achievers Section: Higher Order Thinking Questions - Syllabus as per Section 1
+                        </p>
                     </div>
                 </div>
             </div>
@@ -174,13 +207,19 @@
                     <h2 class="mb-0">
                         <button class="btn  btn-block text-left collapsed" type="button" data-toggle="collapse"
                             data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                         <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 6 <span style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p> 
+                            <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 6 <span
+                                    style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
                         </button>
                     </h2>
                 </div>
                 <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
                     <div class="card-body">
-                       <p style="font-size: 12px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae pariatur deserunt voluptas sit totam dolorem facilis eveniet, unde iure vitae nesciunt aperiam nam cum.</p>
+                        <p style="font-size: 14px;">Section 1: Knowing Our Numbers, Whole Numbers, Playing with Numbers,
+                            Basic Geometrical Ideas, Understanding Elementary Shapes, Integers, Fractions, Decimals,
+                            Data Handling, Mensuration, Algebra, Ratio And Proportion, Symmetry, Practical Geometry.
+                            <br>
+                            Achievers Section: Higher Order Thinking Questions - Syllabus as per Section 1
+                        </p>
                     </div>
                 </div>
             </div>
@@ -189,19 +228,93 @@
                     <h2 class="mb-0">
                         <button class="btn  btn-block text-left collapsed" type="button" data-toggle="collapse"
                             data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                         <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 7 <span style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p> 
+                            <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 7 <span
+                                    style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
                         </button>
                     </h2>
                 </div>
                 <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordion">
                     <div class="card-body">
-                       <p style="font-size: 12px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae pariatur deserunt voluptas sit totam dolorem facilis eveniet, unde iure vitae nesciunt aperiam nam cum.</p>
+                        <p style="font-size: 14px;">Section 1: Integers, Fractions and Decimals, Exponents and Powers,
+                            Algebraic Expressions, Simple Linear Equations, Lines and Angles, Comparing Quantities, The
+                            Triangle and its Properties, Symmetry, Congruence of Triangles, Rational Numbers, Perimeter
+                            and Area, Data Handling, Visualizing Solid Shapes, Practical Geometry.
+                            <br>
+                            Achievers Section: Higher Order Thinking Questions - Syllabus as per Section 1
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card  border border-dark rounded my-2">
+                <div class="card-header" id="headingEight">
+                    <h2 class="mb-0">
+                        <button class="btn  btn-block text-left collapsed" type="button" data-toggle="collapse"
+                            data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
+                            <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 8 <span
+                                    style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
+                        </button>
+                    </h2>
+                </div>
+                <div id="collapseEight" class="collapse" aria-labelledby="headingEight" data-parent="#accordion">
+                    <div class="card-body">
+                        <p style="font-size: 14px;">Section 1: Rational Numbers, Squares and Square Roots, Cubes and
+                            Cube Roots, Exponents and Powers, Comparing Quantities, Algebraic Expressions and
+                            Identities, Linear Equations in One Variable, Understanding Quadrilaterals, Constructions,
+                            Mensuration, Visualizing Solid Shapes, Data Handling, Direct and Inverse Variations,
+                            Factorization, Introduction to Graphs, Playing with Numbers.
+                            <br>
+                            Achievers Section: Higher Order Thinking Questions - Syllabus as per Section 1
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card  border border-dark rounded my-2">
+                <div class="card-header" id="headingNine">
+                    <h2 class="mb-0">
+                        <button class="btn  btn-block text-left collapsed" type="button" data-toggle="collapse"
+                            data-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+                            <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 9 <span
+                                    style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
+                        </button>
+                    </h2>
+                </div>
+                <div id="collapseNine" class="collapse" aria-labelledby="headingNine" data-parent="#accordion">
+                    <div class="card-body">
+                        <p style="font-size: 14px;">Section 1: Number Systems, Polynomials, Coordinate Geometry, Linear
+                            Equations in Two Variables, Introduction to Euclid’s Geometry, Lines and Angles, Triangles,
+                            Quadrilaterals, Areas of Parallelograms and Triangles, Circles, Constructions, Heron’s
+                            Formula, Surface Areas and Volumes, Statistics, Probability.
+                            <br>
+                            Achievers Section: Higher Order Thinking Questions - Syllabus as per Section 1
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card  border border-dark rounded my-2">
+                <div class="card-header" id="headingTen">
+                    <h2 class="mb-0">
+                        <button class="btn  btn-block text-left collapsed" type="button" data-toggle="collapse"
+                            data-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
+                            <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 10 <span
+                                    style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
+                        </button>
+                    </h2>
+                </div>
+                <div id="collapseTen" class="collapse" aria-labelledby="headingEight" data-parent="#accordion">
+                    <div class="card-body">
+                        <p style="font-size: 14px;">Section 1: Real Numbers, Polynomials, Pair of Linear Equations in
+                            Two Variables, Quadratic Equations, Arithmetic Progressions, Triangles, Coordinate Geometry,
+                            Introduction to Trigonometry, Some Applications of Trigonometry, Circles, Constructions,
+                            Areas Related to Circles, Surface Areas and Volumes, Statistics, Probability.
+                            <br>
+                            Achievers Section: Higher Order Thinking Questions - Syllabus as per Section 1
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    
+
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
@@ -216,6 +329,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
     integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
     crossorigin="anonymous"></script>
-     <script src="./assests/js/emo.js"></script>
+<script src="./assests/js/emo.js"></script>
 
 </html>
