--- a/eso.html
+++ b/eso.html
@@ -55,7 +55,7 @@
             <div class="col-md-12">
                 <p class="text-center">EduLiasion Science Olympiad is held in two level:</p>
                 <br>
-                <p > <b>Level 1: </b> <br> The respective school is the venue for students appearing
+                <p> <b>Level 1: </b> <br> The respective school is the venue for students appearing
                     through schools. For those students who are registered as an individual will have to take exam from
                     home or from institute having computer with good internet connectivity.
                     <br>
@@ -74,17 +74,20 @@
                     </ul>
                 </div>
                 <p>
-                  <b> Level 2:</b> <br> The Level 2 is organised for students of classes 3 to 10 only. The qualifiers to second
+                    <b> Level 2:</b> <br> The Level 2 is organised for students of classes 3 to 10 only. The qualifiers
+                    to second
                     round would include the following:
                     <br>
-                    <ul>
-                        <li>Top 5% of candidates in a particular class that have given the Level 1 exam. Please note that, to
-                            calculate the top 5% students, due weightage will be given to marks scored in different sections.
-                            Also, each section is accorded with a separate weightage.</li>
-                        <li>Top 25 rank holders in a particular class and in a particular zone.</li>
-                    </ul>
-                     <br>
-                    
+                <ul>
+                    <li>Top 5% of candidates in a particular class that have given the Level 1 exam. Please note that,
+                        to
+                        calculate the top 5% students, due weightage will be given to marks scored in different
+                        sections.
+                        Also, each section is accorded with a separate weightage.</li>
+                    <li>Top 25 rank holders in a particular class and in a particular zone.</li>
+                </ul>
+                <br>
+
                 </p>
 
             </div>
@@ -97,15 +100,19 @@
                     <h2 class="mb-0">
                         <button class="btn  btn-block text-left" type="button" data-toggle="collapse"
                             data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                           <p style="font-size: 15px; color: #ff9900; font-weight: 700;"> Class 1 <span style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
+                            <p style="font-size: 15px; color: #ff9900; font-weight: 700;"> Class 1 <span
+                                    style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
                         </button>
                     </h2>
                 </div>
 
-                <div id="collapseOne" class="collapse " aria-labelledby="class1"
-                    data-parent="#accordion">
+                <div id="collapseOne" class="collapse " aria-labelledby="class1" data-parent="#accordion">
                     <div class="card-body ">
-                        <p style="font-size: 12px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae pariatur deserunt voluptas sit totam dolorem facilis eveniet, unde iure vitae nesciunt aperiam nam cum.</p>
+                        <p style="font-size: 14px;">Section 1: Living and Non-living Things, Plants, Animals, Human
+                            Beings and Their Needs, Good Habits and Safety Rules, Air and Water, Weather and the Sky.
+                            <br>
+                            Achievers Section: Higher Order Thinking Questions - Syllabus as per Section 1
+                        </p>
                     </div>
                 </div>
             </div>
@@ -114,13 +121,19 @@
                     <h2 class="mb-0">
                         <button class="btn  btn-block text-left collapsed" type="button" data-toggle="collapse"
                             data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                          <p style="font-size: 15px; color: #ff9900; font-weight: 700;">Class 2  <span style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p> 
+                            <p style="font-size: 15px; color: #ff9900; font-weight: 700;">Class 2 <span
+                                    style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
                         </button>
                     </h2>
                 </div>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                     <div class="card-body">
-                        <p style="font-size: 12px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae pariatur deserunt voluptas sit totam dolorem facilis eveniet, unde iure vitae nesciunt aperiam nam cum.</p>
+                        <p style="font-size: 14px;">Section 1: Plants, Animals, Human Body, Food, Housing and Clothing,
+                            Family and Festivals, Occupations, Good Habits and Safety Rules, Transport and
+                            Communication, Air, Water and Rocks, Earth and Universe.
+                            <br>
+                            Achievers Section: Higher Order Thinking Questions - Syllabus as per Section 1
+                        </p>
                     </div>
                 </div>
             </div>
@@ -129,13 +142,19 @@
                     <h2 class="mb-0">
                         <button class="btn  btn-block text-left collapsed" type="button" data-toggle="collapse"
                             data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                         <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 3 <span style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p> 
+                            <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 3 <span
+                                    style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
                         </button>
                     </h2>
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                     <div class="card-body">
-                       <p style="font-size: 12px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae pariatur deserunt voluptas sit totam dolorem facilis eveniet, unde iure vitae nesciunt aperiam nam cum.</p>
+                        <p style="font-size: 14px;">Section 1: Plants and Animals, Birds, Food, Housing and Clothing,
+                            Transport and Communication, Human Body, Earth and Universe, Matter and Materials, Light,
+                            Sound and Force, Our Environment.
+                            <br>
+                            Achievers Section: Higher Order Thinking Questions - Syllabus as per Section 1
+                        </p>
                     </div>
                 </div>
             </div>
@@ -144,13 +163,18 @@
                     <h2 class="mb-0">
                         <button class="btn  btn-block text-left collapsed" type="button" data-toggle="collapse"
                             data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                         <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 4 <span style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p> 
+                            <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 4 <span
+                                    style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
                         </button>
                     </h2>
                 </div>
                 <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
                     <div class="card-body">
-                       <p style="font-size: 12px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae pariatur deserunt voluptas sit totam dolorem facilis eveniet, unde iure vitae nesciunt aperiam nam cum.</p>
+                        <p style="font-size: 14px;">Section 1: Plants, Animals, Food and Digestion, Clothing, Matter and
+                            Materials, Force, Work and Energy, Our Environment, Earth and Universe.
+                            <br>
+                            Achievers Section: Higher Order Thinking Questions - Syllabus as per Section 1
+                        </p>
                     </div>
                 </div>
             </div>
@@ -159,13 +183,18 @@
                     <h2 class="mb-0">
                         <button class="btn  btn-block text-left collapsed" type="button" data-toggle="collapse"
                             data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                         <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 5 <span style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p> 
+                            <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 5 <span
+                                    style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
                         </button>
                     </h2>
                 </div>
                 <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
                     <div class="card-body">
-                       <p style="font-size: 12px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae pariatur deserunt voluptas sit totam dolorem facilis eveniet, unde iure vitae nesciunt aperiam nam cum.</p>
+                        <p style="font-size: 14px;">Section 1: Animals, Human Body and Health, Plants, Natural
+                            Resources, Pollution and Calamities, Earth and Universe, Matter, Force, Work and Energy.
+                            <br>
+                            Achievers Section: Higher Order Thinking Questions - Syllabus as per Section 1
+                        </p>
                     </div>
                 </div>
             </div>
@@ -174,13 +203,20 @@
                     <h2 class="mb-0">
                         <button class="btn  btn-block text-left collapsed" type="button" data-toggle="collapse"
                             data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                         <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 6 <span style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p> 
+                            <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 6 <span
+                                    style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
                         </button>
                     </h2>
                 </div>
                 <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
                     <div class="card-body">
-                       <p style="font-size: 12px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae pariatur deserunt voluptas sit totam dolorem facilis eveniet, unde iure vitae nesciunt aperiam nam cum.</p>
+                        <p style="font-size: 14px;">Section 1: Motion and Measurement of Distances, Light, Shadows and
+                            Reflections, Electricity and Circuits, Fun with Magnets, Our Environment, Sorting and
+                            Separation of Materials, Changes Around Us, Living Organisms and Their Surroundings, Food
+                            and its Components, Fibre to Fabric.
+                            <br>
+                            Achievers Section: Higher Order Thinking Questions - Syllabus as per Section 1
+                        </p>
                     </div>
                 </div>
             </div>
@@ -189,19 +225,95 @@
                     <h2 class="mb-0">
                         <button class="btn  btn-block text-left collapsed" type="button" data-toggle="collapse"
                             data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                         <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 7 <span style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p> 
+                            <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 7 <span
+                                    style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
                         </button>
                     </h2>
                 </div>
                 <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordion">
                     <div class="card-body">
-                       <p style="font-size: 12px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae pariatur deserunt voluptas sit totam dolorem facilis eveniet, unde iure vitae nesciunt aperiam nam cum.</p>
+                        <p style="font-size: 14px;">Section 1: Heat, Motion and Time, Electric Current and its Effects,
+                            Winds, Storms and Cyclones, Light, Acids, Bases and Salts, Physical and Chemical Changes,
+                            Weather, Climate and Adaptations of Animals to Climate, Fibre to Fabric, Nutrition in Plants
+                            and Animals, Respiration in Organisms, Transportation in Plants and Animals, Reproduction in
+                            Plants, Natural Resources and Their Conservation.
+                            <br>
+                            Achievers Section: Higher Order Thinking Questions - Syllabus as per Section 1
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card  border border-dark rounded my-2">
+                <div class="card-header" id="headingEight">
+                    <h2 class="mb-0">
+                        <button class="btn  btn-block text-left collapsed" type="button" data-toggle="collapse"
+                            data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
+                            <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 8 <span
+                                    style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
+                        </button>
+                    </h2>
+                </div>
+                <div id="collapseEight" class="collapse" aria-labelledby="headingEight" data-parent="#accordion">
+                    <div class="card-body">
+                        <p style="font-size: 14px;">Section 1: Crop Production and Management, Microorganisms, Synthetic
+                            Fibres and Plastics, Metals and Non-metals, Coal and Petroleum, Combustion and Flame,
+                            Conservation of Plants and Animals, Cell, Reproduction and Endocrine System, Force and
+                            Pressure, Friction, Sound, Chemical Effects of Electric Current, Some Natural Phenomena,
+                            Light, Stars and the Solar System, Pollution of Air and Water.
+                            <br>
+                            Achievers Section: Higher Order Thinking Questions - Syllabus as per Section 1
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card  border border-dark rounded my-2">
+                <div class="card-header" id="headingNine">
+                    <h2 class="mb-0">
+                        <button class="btn  btn-block text-left collapsed" type="button" data-toggle="collapse"
+                            data-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+                            <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 9 <span
+                                    style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
+                        </button>
+                    </h2>
+                </div>
+                <div id="collapseNine" class="collapse" aria-labelledby="headingNine" data-parent="#accordion">
+                    <div class="card-body">
+                        <p style="font-size: 14px;">Section 1: Motion, Force and Laws of Motion, Gravitation, Work and
+                            Energy, Sound, Matter in Our Surroundings, Is Matter Around Us Pure, Atoms and Molecules,
+                            Structure of Atom, Cell - The Fundamental Unit of Life, Tissues, Diversity in Living
+                            Organisms, Why Do We Fall Ill, Natural Resources, Improvement in Food Resources.
+                            <br>
+                            Achievers Section: Higher Order Thinking Questions - Syllabus as per Section
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card  border border-dark rounded my-2">
+                <div class="card-header" id="headingTen">
+                    <h2 class="mb-0">
+                        <button class="btn  btn-block text-left collapsed" type="button" data-toggle="collapse"
+                            data-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
+                            <p style="font-size: 15px;color: #ff9900; font-weight: 700;">Class 10 <span
+                                    style=" margin-left:90%"><i class="fas fa-chevron-down"></i></span></p>
+                        </button>
+                    </h2>
+                </div>
+                <div id="collapseTen" class="collapse" aria-labelledby="headingEight" data-parent="#accordion">
+                    <div class="card-body">
+                        <p style="font-size: 14px;">Section 1: Chemical Reactions and Equations, Acids, Bases and Salts,
+                            Metals and Non-metals, Carbon and its Compounds, Periodic Classification of Elements, Life
+                            Processes, Reproduction in Organisms, Heredity and Evolution, Light-Reflection and
+                            Refraction, Human Eye and Colourful World, Electricity, Magnetic Effects of Electric
+                            Current, Sources of Energy, Our Environment and its Management.
+                            <br>
+                            Achievers Section: Higher Order Thinking Questions - Syllabus as per Section 1
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    
+
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
@@ -216,6 +328,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
     integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
     crossorigin="anonymous"></script>
-    <script src="./assests/js/eso.js"></script>
+<script src="./assests/js/eso.js"></script>
 
 </html>
